--- a/src/assets/scss/modules/_hotkeys.scss
+++ b/src/assets/scss/modules/_hotkeys.scss
@@ -23,94 +23,6 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-/*
- * Libraries
- *
- */
-
-@import "bourbon";
-
-
-/*
- * App SASS
- *
- */
-
-@import "../assets/scss/functions";
-@import "../assets/scss/mixins";
-@import "../assets/scss/variables";
-
-
-/*
- * Grid
- *
- */
-
-@import "../assets/scss/grid/grid";
-
-
-/*
- * Base & Layout
- *
- */
-
-@import "../assets/scss/base/reset";
-@import "../assets/scss/base/base";
-
-@import "../assets/scss/layout/header";
-@import "../assets/scss/layout/content";
-
-
-/*
- * Modules
- *
- */
-
-@import "../assets/scss/modules/container";
-@import "../assets/scss/modules/content";
-@import "../assets/scss/modules/heading";
-@import "../assets/scss/modules/hotkeys";
-@import "../assets/scss/modules/state";
-@import "../assets/scss/modules/tile";
-
-// @import "../assets/scss/shared/button";
-// @import "../assets/scss/shared/icon";
-// @import "../assets/scss/shared/list";
-// @import "../assets/scss/shared/modal";
-// @import "../assets/scss/shared/thing";
-// @import "../assets/scss/shared/tiles";
-
-
-/*
- * Directives (Shared UI)
- */
-
-@import "../app/shared/ui/slider/slider";
-@import "../app/shared/ui/tabs/tabs";
-
-// @import "../app/shared/ui/action-bar/action-bar";
-// @import "../app/shared/ui/button-group/button-group";
-// @import "../app/shared/ui/color/color";
-// @import "../app/shared/ui/form/form";
-// @import "../app/shared/ui/range/range";
-// @import "../app/shared/ui/remote-navigation/remote-navigation";
-// @import "../app/shared/ui/remote-fn/remote-fn";
-// @import "../app/shared/ui/remote-player/remote-player";
-// @import "../app/shared/ui/wizard/wizard";
-
-
-/*
- * App base
- *
- */
-
-// @import "../assets/scss/base";
-// @import "../assets/scss/layout";
-
-
-/*
- * App components
- *
- */
-
-// @import "../assets/scss/components/intro";
+.hotkey::first-letter {
+  text-decoration: underline;
+}
