Added new styles and animation to intro page. Prepared intro page for app setup.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -70,6 +70,7 @@
 @import "../assets/scss/modules/content";
 @import "../assets/scss/modules/heading";
 @import "../assets/scss/modules/hotkeys";
+@import "../assets/scss/modules/loading";
 @import "../assets/scss/modules/state";
 @import "../assets/scss/modules/tile";
 
@@ -86,6 +87,7 @@
  */
 
 @import "../app/shared/ui/slider/slider";
+// @import "../app/shared/ui/wizard/wizard";
 @import "../app/shared/ui/tabs/tabs";
 
 // @import "../app/shared/ui/action-bar/action-bar";
