--- a/src/assets/scss/layout/_content.scss
+++ b/src/assets/scss/layout/_content.scss
@@ -23,7 +23,138 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-#main > .content {
+#main.ng-enter {
+  opacity: 0;
+  @include transform(scale(0.9, 0.9));
+  @include transition(transform 0.3s ease-in-out, opacity 0.6s linear);
+}
+
+#main.ng-enter.ng-enter-active {
+  opacity: 1;
+  @include transform(scale(1, 1));
+}
+
+
+#main.default > .content {
   min-height: 100%;
   @include rem(padding-top, 7.5);
+}
+
+#main.intro > .content {
+  height: 100%;
+  @include rem(padding, 1.5);
+
+  // Logo
+  .logo {
+    display: block;
+    margin: 0 auto;
+
+    @include media($breakpoint-xs) {
+      @include rem(margin-top, 6);
+    }
+  }
+
+  .logo.small-add,
+  .logo.small-remove {
+    @include transition(height 0.6s ease-in-out, margin-top 0.6s ease-in-out, width 0.6s ease-in-out);
+  }
+
+  .logo,
+  .logo.small-add,
+  .logo.small-remove.small-remove-active {
+    @include media($breakpoint-xs) {
+      @include rem(height, 9);
+      @include rem(margin-top, 6);
+      @include rem(width, 9);
+    }
+  }
+
+  .logo.small,
+  .logo.small-add.small-add-active,
+  .logo.small-remove {
+    @include media($breakpoint-xs) {
+      @include rem(height, 4.5);
+      @include rem(margin-top, 4.5);
+      @include rem(width, 4.5);
+    }
+  }
+
+  // .logo.small-add,
+  .logo.small-remove {
+    @include transition-delay(0.4s);
+  }
+
+
+  // Content
+  .content {
+    margin: 0 auto;
+    position: relative;
+
+    @include media($breakpoint-xs) {
+      width: 87.5%;
+    }
+  }
+
+  // Info texts
+  .info {
+    @include rem(margin-top, 4.5);
+    text-align: center;
+    position: absolute;
+      top: 0;
+    width: 100%;
+  }
+
+  .info.ng-hide-add,
+  .info.ng-hide-remove.ng-hide-remove-active {
+    opacity: 1;
+  }
+
+  .info.ng-hide-remove,
+  .info.ng-hide-add.ng-hide-add-active {
+    opacity: 0;
+  }
+
+  .info.ng-hide-add,
+  .info.ng-hide-remove {
+    display: block !important;
+    @include transition(opacity 0.3s linear);
+  }
+
+  // .info.ng-hide-add,
+  .info.ng-hide-remove {
+    @include transition-delay(0.4s);
+  }
+
+
+  // Setup
+  .wizard {
+    @include rem(margin-top, 3);
+    position: absolute;
+      top: 0;
+    width: 100%;
+  }
+
+  .wizard.ng-hide-add,
+  .wizard.ng-hide-remove.ng-hide-remove-active {
+    opacity: 1;
+  }
+
+  .wizard.ng-hide-remove,
+  .wizard.ng-hide-add.ng-hide-add-active {
+    opacity: 0;
+  }
+
+  .wizard.ng-hide-add,
+  .wizard.ng-hide-remove {
+    display: block !important;
+  }
+
+  .wizard.ng-hide-add,
+  .wizard.ng-hide-remove {
+    @include transition(opacity 0.3s linear);
+  }
+
+  .wizard.ng-hide-remove {
+    @include transition-delay(0.4s);
+  }
 }
