--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,18 +21,21 @@
 -->
 
 
-<header class="app">
-  <div class="content">
-    <nav>
-      <ul>
-        <li><a ng-class="{ active: app.$state.includes('guh.devices') }" ui-sref="guh.devices.master">Devices</a></li>
-        <li><a ng-class="{ active: app.$state.includes('guh.services') }" ui-sref="guh.services.master">Services</a></li>
-        <!-- <li><a ng-class="{ active: app.$state.includes('guh.moods') }" ui-sref="guh.moods.master">Moods</a></li> -->
-      </ul>
-    </nav>
+<!-- <div class="wrapper" ng-class="app.$state.current.controllerAs"> -->
+<div class="wrapper" ng-class="{ 'intro': app.$state.includes('guh.intro'), 'devices': app.$state.includes('guh.devices.master'), 'device': app.$state.includes('guh.devices.detail') }">
+  <header class="app">
+    <div class="content">
+      <nav>
+        <ul>
+          <li><a ng-class="{ active: app.$state.includes('guh.devices') }" ui-sref="guh.devices.master">Devices</a></li>
+          <li><a ng-class="{ active: app.$state.includes('guh.services') }" ui-sref="guh.services.master">Services</a></li>
+          <!-- <li><a ng-class="{ active: app.$state.includes('guh.moods') }" ui-sref="guh.moods.master">Moods</a></li> -->
+        </ul>
+      </nav>
 
-    <guh-action-bar></guh-action-bar>
-  </div>
-</header>
+      <guh-action-bar></guh-action-bar>
+    </div>
+  </header>
 
-<div ui-view class="content"></div>
+  <div ui-view class="content"></div>
+</div>
