--- a/src/app/components/intro/intro.html
+++ b/src/app/components/intro/intro.html
@@ -23,18 +23,18 @@
 
 <div class="content_border-page">
   <!-- Logo -->
-  <img class="logo" ng-class="{ 'small': intro.setup }" src="./assets/svg/guh-logo.svg" alt="Logo of guh showing a green owl with following text: guh - gear up your home">
+  <img class="logo" ng-class="{ 'small': intro.setup, 'not-valid': intro.submitted && !intro.valid }" src="./assets/svg/guh-logo.svg" alt="Logo of guh showing a green owl with following text: guh - gear up your home">
 
-  <div class="content">
+  <div class="content" ng-class="{ 'not-valid': intro.submitted && !intro.valid }">
     <!-- Info texts -->
-    <p class="info loader" ng-show="intro.check">connecting to base</p>
-    <p class="info loader" ng-show="intro.load">loading things</p>
+    <p class="info loader" ng-show="intro.check && intro.valid">connecting to base</p>
+    <p class="info loader" ng-show="intro.load && intro.valid">loading things</p>
 
     <!-- Setup -->
     <div ng-show="intro.setup" guh-wizard handle="setup">
       <div guh-wizard-step title="Please enter the IP address or name of your guh system.">
-        <form name="setHost" ng-submit="intro.setHost()" novalidate>  
-          <label>Host address or name</label>
+        <form name="setHost" novalidate ng-submit="intro.setHost()">  
+          <label>IP address/Host name</label>
           <input name="test"
                  type="text"
                  ng-model="intro.host"
