Changed header styles.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -27,9 +27,9 @@
     <div class="content">
       <nav>
         <ul>
-          <li><a ng-class="{ active: app.$state.includes('guh.devices') }" ui-sref="guh.devices.master">Devices</a></li>
-          <li><a ng-class="{ active: app.$state.includes('guh.services') }" ui-sref="guh.services.master">Services</a></li>
-          <!-- <li><a ng-class="{ active: app.$state.includes('guh.moods') }" ui-sref="guh.moods.master">Moods</a></li> -->
+          <li><a class="heading" ng-class="{ active: app.$state.includes('guh.devices') }" ui-sref="guh.devices.master">Devices</a></li>
+          <li><a class="heading" ng-class="{ active: app.$state.includes('guh.services') }" ui-sref="guh.services.master">Services</a></li>
+          <!-- <li><a class="heading" ng-class="{ active: app.$state.includes('guh.moods') }" ui-sref="guh.moods.master">Moods</a></li> -->
         </ul>
       </nav>
 
