--- a/src/app/shared/ui/action-bar/action-bar.scss
+++ b/src/app/shared/ui/action-bar/action-bar.scss
@@ -23,40 +23,40 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-.action-bar {
-  text-align: right;
+// .action-bar {
+//   text-align: right;
 
-  button {
-    @include appearance(none);
-    background-color: transparent;
-    border: none;
-    color: get-color("foreground");
-    cursor: pointer;
-    float: right;
-    @include rem(height, 1.5);
-    margin: 0;
-    outline: none;
-    padding: 0;
-    position: relative;
+//   button {
+//     @include appearance(none);
+//     background-color: transparent;
+//     border: none;
+//     color: get-color("foreground");
+//     cursor: pointer;
+//     float: right;
+//     @include rem(height, 1.5);
+//     margin: 0;
+//     outline: none;
+//     padding: 0;
+//     position: relative;
 
-    &:hover {
+//     &:hover {
 
-    }
+//     }
 
-    span {
-      display: inline-block;
-      @include rem(font-size, 1);
-      @include rem(height, 1.5);
-      @include rem(line-height, 1.5);
-      @include rem(padding-right, 0.5);
-      // position: relative;
-      //   @include rem(top, -0.4);
-    }
+//     span {
+//       display: inline-block;
+//       @include rem(font-size, 1);
+//       @include rem(height, 1.5);
+//       @include rem(line-height, 1.5);
+//       @include rem(padding-right, 0.5);
+//       // position: relative;
+//       //   @include rem(top, -0.4);
+//     }
 
-    .icon {
-      @include rem(height, 1.5);
-      @include rem(padding, 0.1, 0, 0.2);
-      @include rem(width, 1.5);
-    }
-  }
-}
+//     .icon {
+//       @include rem(height, 1.5);
+//       @include rem(padding, 0.1, 0, 0.2);
+//       @include rem(width, 1.5);
+//     }
+//   }
+// }
