--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -70,7 +70,9 @@
 @import "../assets/scss/modules/content";
 @import "../assets/scss/modules/heading";
 @import "../assets/scss/modules/hotkeys";
+@import "../assets/scss/modules/list";
 @import "../assets/scss/modules/loading";
+@import "../assets/scss/modules/overlay";
 @import "../assets/scss/modules/state";
 @import "../assets/scss/modules/tile";
 
@@ -87,7 +89,7 @@
  */
 
 @import "../app/shared/ui/slider/slider";
-// @import "../app/shared/ui/wizard/wizard";
+@import "../app/shared/ui/wizard/wizard";
 @import "../app/shared/ui/tabs/tabs";
 
 // @import "../app/shared/ui/action-bar/action-bar";
